--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,14 @@ python-dotenv
 ffmpeg-python
 transformers
 
+moviepy>=1.0.3
+loguru>=0.5.3
+pydub>=0.25.1
+invoke==1.7.3
+pytest==7.2.2
+requests
+torch>=1.9
+python-dotenv
+ffmpeg-python
+transformers
+openai-whisper
