--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-moviepy>=1.0.3
-loguru>=0.5.3
-pydub>=0.25.1
-invoke==1.7.3
-pytest==7.2.2
-requests
-torch>=1.9
-python-dotenv
+openai-whisper
+torch
+torchaudio
+numpy
 ffmpeg-python
+pydub
+moviepy
+loguru
+python-dotenv
+requests
 transformers
+pyannote.audio
+pyannote.core
+pyannote.metrics
